# local-app-runner

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  release.toml
.github/workflows/: release.yml
crates/lars-cli/: Cargo.toml
crates/lars-cli/src/: main.rs  output.rs
crates/lars-cli/src/commands/: add.rs  attach.rs  completions.rs  config_cmd.rs  doctor.rs  enable.rs  export.rs  import.rs  inspect.rs  list.rs  logs.rs  mod.rs  remove.rs  rename.rs  restart.rs  start.rs  start_all.rs  stop.rs  stop_all.rs
crates/lars-cli/tests/: cli_tests.rs
crates/lars-core/: Cargo.toml
crates/lars-core/src/: config.rs  error.rs  lib.rs  models.rs  runner.rs  validation.rs
