[workspace]
resolver = "2"
members = ["crates/lars-core", "crates/lars-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rahul Mehra"]
license = "MIT"
repository = "https://github.com/rahulmehra/local-app-runner"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
