[package]
name = "lars-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for LARS (Local App Runner Service) - manage local services via tmux"
repository = "https://github.com/lolstring/local-app-runner"
homepage = "https://github.com/lolstring/local-app-runner"
publish = false

[[bin]]
name = "lars"
path = "src/main.rs"

[dependencies]
lars-core = { path = "../lars-core" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"