[package]
name = "lars-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for LARS (Local App Runner Service) - config, models, and runner implementations"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
thiserror = "1"
shell-escape = "0.1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
